Add Forms, views, urls and basic template for checkout app

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -91,7 +91,7 @@
                                         <i class="fas fa-chevron-left mr-2"></i>
                                         Keep Shopping
                                     </a>
-                                    <a href="" class="btn btn-primary rounded btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn btn-primary rounded btn-lg">
                                         Secure Checkout
                                         <i class="fas fa-lock ml-2"></i>
                                     </a>
