--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -103,14 +103,14 @@
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">                    
-						<a href="{% url 'view_cart' %}" class="btn btn-outline-black rounded-0">
+						<a href="{% url 'view_cart' %}" class="btn btn-outline-black rounded">
 							<span class="icon">
 								<i class="fas fa-chevron-left"></i>
 							</span>
-							<span class="font-weight-bold">Update Cart</span>
+							<span class="font-weight-bold rounded">Update Cart</span>
 						</a>
-						<button id="submit-button" class="btn btn-black rounded-0">
-							<span class="font-weight-bold">Submit Order</span>
+						<button id="submit-button" class="btn btn-black rounded">
+							<span class="font-weight-bold rounded">Submit Order</span>
 							<span class="icon">
 								<i class="fas fa-lock"></i>
 							</span>
@@ -126,4 +126,11 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
