--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -30,7 +30,7 @@
             <div class="col-12 col-lg-6">
                 <div class="row">
                     <div class="col-7 offset-2">
-                        <p class="mb-1 mt-0">Item</p>
+                        <p class="mb-1 mt-0">Product</p>
                     </div>
                     <div class="col-3 text-right">
                         <p class="mb-1 mt-0">Subtotal</p>
@@ -40,8 +40,9 @@
                     <div class="row">
                         <div class="col-2 mb-1">
                             <a href="{% url 'product_detail' item.product.id %}">
-                                {% if item.product.image %}
-                                    <img class="w-100" src="{{ item.product.product.image.url }}" alt="{{ item.product.name  }}">
+                                {% if item.product.productImageName %}
+                                    <img class="w-100" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
+                                                
                                 {% else %}
                                     <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name  }}">
                                 {% endif %}
