--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load template_tag %}
 
 {% block extra_title %}Products{% endblock %}
 {% block page_header %}
@@ -21,25 +22,34 @@
         <h4 class="lead mb-0 text-left font-weight-bold">SKU: {{ product.sku }}</h4>
         <p>{{ product.description }}</p>
         <p>{{ product.liquid }}</p>
-        <form class="product-form" action="{% url 'add_to_cart' product.id %}" method="POST">
-            {% csrf_token %}
-            <div class="product-form-row">
-                <div class="col-full">
-                </div>
-            
-                <div class="col-full w-30 mx-auto">
-                    <a href="{% url 'products' %}" class="btn btn rounded mt-3">
-                        <span class="icon">
-                            <i class="fas fa-arrow-left"></i>
-                        </span>
-                        <span class="text">Continue Shopping</span>
-                    </a>
-                    <button type="submit" class="btn btn rounded text mt-3">Add to Cart</button>
-                </div>
-                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+        
+        <div class="action-btn row w-100 my-3 mx-auto">
+            <div class="col-lg-4 col-md-4 col-sm-4 text-end">
+                <form class="d-inline-block me-2" action="{% url 'add_to_cart' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-sm rounded text">Add to Cart</button>
+                </form>
             </div>
-        </form>
-        <hr>
+            <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                <a href="{% url 'products' %}" class="d-inline-block btn btn-sm rounded">
+                    <span class="text">Continue Shopping</span>
+                </a>
+            </div>    
+            <div class="col-lg-4 col-md-4 col-sm-4 text-start">
+                {% is_favorited_by_user entry.product request.user as is_favorited %}
+                <form style="display: inline;" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="product_id" value="{{ entry.product.id }}">
+                    {% if is_favorited %}
+                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'products:remove_from_favorites' entry.product.id %}">Remove from Favorites</button>
+                    {% else %}
+                        <button type="submit" class="btn btn-secondary btn-sm" formaction="{% url 'products:add_to_favorites' entry.product.id %}">Add to Favorites</button>
+                    {% endif %}
+                </form>
+            </div>
+        </div>
+        
+        
     </div>
 </div>
 {% endblock %}
