--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div class="overlay"></div>
 
-<div class="container mb-2">
+<div class="container-fluid mb-2 m-0 p-0">
     <div class="row">
         <div class="col">
             <hr>
