--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,8 +15,7 @@
     </div>
 {% endblock %}
 {% block content %}
-    <div class="overlay"></div>
-
+    <div class="overlay"></div>    
     <div class="container">
         <div class="row">
             <div class="col">
@@ -28,42 +27,46 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
-                <div class="row">
-                    <div class="col-7 offset-2">
-                        <p class="mb-1 mt-0">Product</p>
-                    </div>
-                    <div class="col-3 text-right">
-                        <p class="mb-1 mt-0">Subtotal</p>
-                    </div>
-                </div>
-                {% for item in cart_items %}
                     <div class="row">
-                        <div class="col-2 mb-1">
-                            <a href="{% url 'product_detail' item.product.id %}">
-                                {% if item.product.productImageName %}
-                                    <img class="w-100" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
-                                                
-                                {% else %}
-                                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name  }}">
-                                {% endif %}
-                            </a>
+                        <div class="col-7">
+                            <p class="my-0"><strong>{{ item.product.title }}</strong></p>
+                            <p class="my-0 small">Qty: {{ item.quantity }}</p>
+                        </div>
+                        
+                    
+                        <div class="col-3 text-right">
+                            <p class="mb-1 mt-0">Subtotal</p>
                         </div>
                     </div>
-                {% endfor %}
-                <hr class="my-1">
-                <div class="row text-black text-right">
-                    <div class="col-7 offset-2">
-                        <p class="my-1">Order Total:</p>
-                        <p class="my-1">Delivery:</p>
-                        <p class="my-1">Grand Total:</p>
-                    </div>
-                    <div class="col-3">
-                        <p class="my-1">${{ total | floatformat:2 }}</p>
-                        <p class="my-1">${{ delivery | floatformat:2 }}</p>
-                        <p class="my-1"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                    {% for item in cart_items %}
+                        <div class="row">
+                            <div class="col-3 mb-1">
+                                <a href="{% url 'product_detail' item.product.id %}">
+                                    {% if item.product.productImageName %}
+                                        <img class="w-100" src="/media/small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
+                                                    
+                                    {% else %}
+                                        <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name  }}">
+                                    {% endif %}
+                                </a>
+                            <p class="my-0 font-weight-bold small font-italic">{{ item.product.title }}</p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                    <hr class="my-1">
+                    <div class="row text-black text-right">
+                        <div class="col-7 offset-2">
+                            <p class="my-1">Order Total:</p>
+                            <p class="my-1">Delivery:</p>
+                            <p class="my-1">Grand Total:</p>
+                        </div>
+                        <div class="col-3">
+                            <p class="my-1">${{ total | floatformat:2 }}</p>
+                            <p class="my-1">${{ delivery | floatformat:2 }}</p>
+                            <p class="my-1"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                        </div>
                     </div>
                 </div>
-            </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted text-center text-black">Your delivery Details</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -126,6 +129,13 @@
                 </form>
             </div>
         </div>
+    </div>
+    <div id="loading-overlay">
+        <h1 class="text-light logo-font loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            </span>
+        </h1>
     </div>
 {% endblock %}
 
