--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -127,7 +127,7 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/cart/remove/${itemId}/`;
+        var url = `/cart/delete/${itemId}/`;
         var data = {'csrfmiddlewaretoken': csrfToken};
 
         $.post(url, data)
