--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,11 +10,18 @@
 </div>
 {% endblock %}
 {% block content %}
-    <div class="container h-100">
+    <!-- <div class="container h-100"> -->
+       <!-- <div class="display-4 text-black ml-5 mt-5"> 
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
                     <h1 class="display-4 text-black">
                         Mystic arts and crafts from the Himalayas!
+                    </h1> -->
+       <div class="container h-100">
+            <div class="row mt-5 d-flex align-items-center custom-position">
+                <div class="col-12 text-center">
+                    <h1 class="display-4 text-white text-center text-md-left">
+                        Discover the arts and crafts from the Himalayas!
                     </h1>
                     <div class="my-5">
                         <h4>
