--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,6 +15,7 @@
 {% endblock %}
 {% block content %}
 <div class="overlay"></div>
+<div class="container">
 
 <div class="container w-100">
     <div class="row justify-content-center">
