Add media queries for all screen sizes and Fix style issue on all templates

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,10 +10,13 @@ body {
     background-position: top 25% right 0;
     display: flex;
     flex-direction: column;
-    
-} 
+    min-height: 100vh;
+    margin: 0;
+ 
+}
 main {
     flex-grow: 1;
+    
 }
 .header-container {
     z-index: 10;
@@ -86,14 +89,16 @@ main {
 }
 
 /*----Footers----*/
+
 .quick-link {
     color: black;
 }
-.footer-top {
-    border-top : 0.5px solid #b4963c;
-}
+
 #footer {
-    background-color:  #ede8dc;;
+    background-color:  #ede8dc;
+    padding: 10px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 .social-icon {
     width: 25px;
@@ -319,4 +324,68 @@ button:hover,
 .checkout-icon {
     margin-left: 10px;
 }
+ 
+/*--- Media Queries--- */
 
+/* xmall devices 355px and up */
+@media (min-width: 355px) {
+    body {
+        background-size: cover;
+        background-position: center top;
+        background-repeat: no-repeat;
+        background-color:  #ede8dc;;
+    }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    body {
+      background-size: contain;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-color:  #ede8dc;;
+    }
+  }
+  
+  /* Medium devices (tablets, 768px and up) */
+  @media (min-width: 768px) { 
+    body {
+      background-size: cover;
+      background-position: center top;
+    }
+  }
+  
+  /* Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) { 
+    body {
+      background-size: cover;
+      background-position: center top;
+    }
+  }
+  
+  /* Extra large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) { 
+    body {
+      background-size: cover;
+      background-position: center center;
+    }
+  }
+
+
+@media (max-width: 576px) {
+    .custom-heading {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+    .custom-heading {
+        font-size: 1.5rem;
+    }
+}
+/* 
+@media (min-width: 376px) and (max-width: 768px) {
+    .action-btn {
+        margin-top: 20px;
+    }
+} */
