--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -38,6 +38,11 @@
     <li class="nav-item">
       <a class="logo-font nav-link text-black mr-3" href="{% url 'about_us' %}" id="home-link">About Us</a>
     </li>
+
+    <!-- Contact Us -->
+    <li class="nav-item">
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'contact_us' %}" id="home-link">Contact Us</a>
+    </li>
     
   </ul>
 </div>
