--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -42,8 +42,9 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
+    <a class="btn btn-outline-dark w-25" href="{% url 'home' %}">Home</a>
        
-    <button class="btn btn-outline-dark w-25 mb-2 text-uppercase" type="submit">{% trans "Sign In" %}</button>
+    <button class="btn btn-outline-dark w-25" type="submit">{% trans "Sign In" %}</button>
     <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
   </form>
 </div>
