--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,7 +1,7 @@
 <!--  Footer -->
 <footer id="footer">
   <div class="footer-top">
-    <div class="container mt-3">
+    <div class="container-fluid">
       <div class="row justify-content-center text-center text-lg-left">
 
         <div class="col-lg-4 col-md-6 mx-auto">
