--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,4 @@
-<div class="toast custom-toast rounded border-top-0 slide-in" data-autohide="false">
+<div class="toast custom-toast rounded border-top-0 slide-in" data-autohide="true" data-delay="3000">
     <div class="arrow-up arrow-info"></div>
     <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header bg-info text-white">
