Fix bug in search functionality, add xl view of image on product detail

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,10 @@
 
         <!-- Product Image -->
         <div class="col-lg-6 col-md-12">
-            <img src="{{ MEDIA_URL }}full/{{ product_image_name }}" alt="Product Image" class="img-fluid">
+            <a href="{{ MEDIA_URL }}full/{{ product_image_name }}" data-lightbox="product-image">
+                <img src="{{ MEDIA_URL }}full/{{ product_image_name }}" alt="Product Image" class="img-fluid">
+            </a>
+            
         </div>
 
         <!-- Product Details -->
@@ -27,9 +30,9 @@
             <h3 class="lead mb-2 font-weight-bold">Price: USD$ {{ product.price }}</h3>
             <h4 class="lead mb-2 text-left font-weight-bold">SKU: {{ product.sku }}</h4>
             <br>
-            <p>{{ product.description }}</p>
+            <p>{{ product.description|safe }}</p>
             <br>
-            <p>{{ product.liquid }}</p>
+            <p>{{ product.liquid|safe }}</p>
             <div class="d-flex justify-content-center flex-wrap">
                 <div class="action-btn row w-100 my-3 mx-auto">
                     <!-- Add to Cart Button -->
@@ -44,7 +47,7 @@
                             <span class="text">Continue Shopping</span>
                         </a>
                     </div>
-                    <div class="col-auto">
+                    <div class="col-auto mb-3">
                         {% is_favorited_by_user product request.user as is_favorited %}
                         <form style="display: inline;" method="POST">
                             {% csrf_token %}
