--- a/products/templates/products/search_results.html
+++ b/products/templates/products/search_results.html
@@ -16,7 +16,7 @@
 <!-- <div class="filter-products"></div> -->
 <div class="overlay"></div>
 <!-- sorting functionality -->
-    <div class="row">
+    <div class="row mx-4">
         {% for entry in results %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card h-100 border-0">
@@ -27,7 +27,7 @@
                     <p class="mb-0">{{ entry.product.title }}</p>
                 </div>
                 <div class="card-footer bg-white pt-0 border-0 text-left">
-                    <div class="row">
+                    <div class="row mx-3">
                         <div class="col">
                             <p class="lead mb-0 text-left font-weight-bold">USD$ {{ entry.product.price }}</p>
                             {% if entry.product.productCategory %}
