--- a/products/templates/products/mandala_list.html
+++ b/products/templates/products/mandala_list.html
@@ -7,7 +7,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col-12 text-center text-uppercase logo-font pb-2 my-3">
+        <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
             <div class="header-text">Mandalas</div>
         </div>
     </div>
@@ -113,6 +113,50 @@
         {% endif %}
         {% endfor %}
     </div>
+    <div class="pagination-container adjusted-pag">
+        <div class="pagination">
+            <span class="step-links">
+                {% if products.has_previous %}
+                    <a href="?page=1{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">First</a>
+                    <a href="?page={{ products.previous_page_number }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">Previous</a>
+                {% endif %}
     
+                <!-- Display limited number of  pages -->
+                {% if products.number != 1 %}
+                    <a href="?page=1{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">1</a>
+                {% endif %}
+    
+                {% if products.number|add:"-2" > 1 %}
+                    <span>...</span>
+                {% endif %}
+    
+                {% if products.number|add:"-1" > 1 %}
+                    <a href="?page={{ products.number|add:"-1" }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">{{ products.number|add:"-1" }}</a>
+                {% endif %}
+    
+                <span class="current">{{ products.number }}</span>
+    
+                {% if products.number|add:"1" < products.paginator.num_pages %}
+                    <a href="?page={{ products.number|add:"1" }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">{{ products.number|add:"1" }}</a>
+                {% endif %}
+    
+                {% if products.number|add:"2" < products.paginator.num_pages %}
+                    <span>...</span>
+                {% endif %}
+    
+                {% if products.number != products.paginator.num_pages %}
+                    <a href="?page={{ products.paginator.num_pages }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">{{ products.paginator.num_pages }}</a>
+                {% endif %}
+    
+                {% if products.has_next %}
+                    <a href="?page={{ products.next_page_number }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">Next</a>
+                    <a href="?page={{ products.paginator.num_pages }}{% if category %}&category={{ category }}{% endif %}{% if sorting %}&sorting={{ sorting }}{% endif %}">Last</a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
+    {% endblock %}
+    </div>
+
 
 {% endblock %}
