--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                             {% if request.user.is_superuser %}
                                 <a href="{% url 'product_management' %}" class="dropdown-item">Product Management</a>
                             {% endif %}
-                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
@@ -156,9 +156,11 @@
 
         {% block content %}
         {% endblock %}
-        {% include 'includes/footer.html' %}
+        
     </main>
-  
+    <footer>
+    {% include 'includes/footer.html' %}
+    </footer>
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
