Fix stripe and webhook_handler issues

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -63,3 +63,8 @@ select option[value=''] {
     margin: 0;
     height: 100%;
 }
+.order-confirmation-wrapper {
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+}
